# Palletizer

./: .gitignore  ALGORITHMS.md  CMakeLists.txt  LICENSE  README.md  build_paper.py  results.csv  test_height_handler
logs/: results.csv
multitests/102/: 188.csv  370.csv
multitests/104/: 180.csv  198.csv  336.csv  69.csv
multitests/105/: 204.csv  269.csv
multitests/107/: 80.csv
multitests/109/: 189.csv
multitests/11/: 219.csv  294.csv
multitests/111/: 236.csv  355.csv
multitests/112/: 281.csv  422.csv
multitests/116/: 347.csv
multitests/120/: 251.csv
multitests/132/: 72.csv
multitests/136/: 428.csv
multitests/137/: 33.csv
multitests/139/: 328.csv
multitests/141/: 167.csv
multitests/145/: 154.csv  54.csv
multitests/149/: 410.csv
multitests/153/: 314.csv
multitests/157/: 257.csv
multitests/158/: 175.csv
multitests/163/: 114.csv
multitests/164/: 235.csv
multitests/167/: 223.csv
multitests/17/: 367.csv  40.csv
multitests/170/: 273.csv  354.csv
papers/: 00-abstract.tex  1-Postanovka.tex  10-defines.tex  11-abbrev.tex  12-intro.tex  2-Data.tex  2025-3Dpallette-HSE.tex  3-Obzor.tex  4-1-EYU.tex  4-Solution-HeightHandler.tex  4-Solution-Solvers.tex  4-Solution-Stability.tex  4-Solution-Visualizer.tex  4-Solution.tex  5-Results.tex  6-Results.tex  80-conclusion.tex  81-biblio.tex  90-appendix-build.tex  91-appendix-examples.tex  Plan.tex  pallete.bib  preamble.inc.tex  titlepage.tex
papers_general/: 00-abstract.tex  1-Postanovka.tex  10-defines.tex  11-abbrev.tex  12-intro.tex  2-Data.tex  2025-3Dpallette-HSE.tex  3-Obzor.tex  4-1-EYU.tex  4-2-RS.tex  4-3-AG.tex  4-4-NT.tex  4-Solution.tex  50-research.tex  6-Results.tex  80-conclusion.tex  98-Otzyv.tex  NB.tex  Plan.tex  data.tex  listings.inc.tex  pallete.bib  preamble.inc.tex  titlepage.tex
src/: generate_multitests.cpp  main.cpp  test_height_handler.cpp  train_lns_solver_mutations.cpp
tests/: 101.csv  106.csv  109.csv  110.csv  115.csv  118.csv  120.csv  122.csv  127.csv  134.csv  137.csv  139.csv  140.csv  142.csv  143.csv  144.csv  145.csv  146.csv  149.csv  15.csv  150.csv  151.csv  153.csv  155.csv  158.csv  162.csv  163.csv  164.csv  17.csv  170.csv  171.csv  172.csv  177.csv  181.csv  185.csv  186.csv  191.csv  192.csv  193.csv  194.csv  (+128 more)
(+218 files in other folders)
